# fablecraft

./: .env  .env.example  .eslintrc.js  .gitignore  .vercelignore  AGENTS.md  README.md  gulpfile.js  index.html  index.js  index.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  webpack.config.js
.claude/: launch.json
api/: feedback.ts
app/: index.ts
assets/: index.styl  view.styl
branding/: icon-gallery.html  pure-variants.html
browser/: client.ts  index.js  index.ts  main.ts  model.ts  package-lock.json  package.json  tsconfig.json  view.ts  webpack.config.js
client/: .mocharc.json  board.ts  card.ts  command.ts  config.json  config.ts  controller.ts  fablecraft.ts  geometry.ts  index.js  main.ts  model.ts  package-lock.json  package.json  server.ts  story.ts  text.ts  tsconfig.json  types.ts  view.ts  webpack.config.js
config/: .env.development  .env.production  .env.test
desktop/: index.html  main.ts  preload.ts  renderer.ts  tsconfig.json
docs/: claude_desktop_mcp.md  fablecraft_engineering_brief.md  fablecraft_product_brief.md  overview.md
ilb/: card.ts  config.ts  events.ts  family.ts  node.ts  pillar.ts  tree.ts
lib/: card.ts  config.ts  events.ts  family.ts  karma.conf.js  node.ts  package-lock.json  package.json  pillar.ts  tree.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  error.rs  integrations.rs  lib.rs  main.rs  mcp.rs  native_menu.rs  session.rs
src-tauri/src/storage/: migrations.rs  mod.rs
(+347 files in other folders)
